[tool.poetry]
name = "tableauslackbot"
version = "0.1.0"
description = "Automate your tableau reports to Slack"
authors = ["Shitij Goyal <13149023+masterlittle@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.0"
psycopg2 = "^2.9.1"
APScheduler = "^3.7.0"
slack-bolt = "^1.6.1"
uvicorn = "^0.14.0"
xmltodict = "^0.12.0"
pytz = "^2021.1"
SQLAlchemy = {extras = ["postgres"], version = "^1.4.20"}
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
sentry-sdk = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
